--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="bg-green-100 w-1/2 m-auto py-8 rounded-lg shadow">
             <h3 class="text-3xl font-semibold text-green-700 text-center pb-4">Please Login</h3>
 
-            <form action="">
+            <div>
                 <input id="user-email" class="block w-3/4 mx-auto my-4 p-2 rounded-md" type="text"
                     placeholder="Email Address">
                 <input id="user-password" class="block w-3/4 mx-auto my-4 p-2 rounded-md" type="password"
@@ -28,7 +28,7 @@
 
                 <button id="login-btn"
                     class="bg-red-600 text-white px-8 py-2 font-semibold text-md block mx-auto rounded-lg">Login</button>
-            </form>
+            </div>
         </section>
     </main>
 
