Basic Calculation Complete

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
 
     <!-- Custom Js File -->
-    <script src="main.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
