--- a/bank.html
+++ b/bank.html
@@ -21,15 +21,15 @@
             <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto">
                 <div class="bg-red-500 text-center p-8 rounded-lg text-white">
                     <h1 class="text-3xl font-semibold py-2">Deposit</h1>
-                    <h1 class="text-4xl font-bold py-2">$00</h1>
+                    <h1 class="text-4xl font-bold py-2">$<span id="deposit-box">00</span></h1>
                 </div>
                 <div class="bg-green-500 text-center p-8 rounded-lg text-white">
                     <h1 class="text-3xl font-semibold py-2">Withdraw</h1>
-                    <h1 class="text-4xl font-bold py-2">$00</h1>
+                    <h1 class="text-4xl font-bold py-2">$<span id="withdraw-box">00</span></h1>
                 </div>
                 <div class="bg-blue-500 text-center p-8 rounded-lg text-white">
                     <h1 class="text-3xl font-semibold py-2">Balance</h1>
-                    <h1 class="text-4xl font-bold py-2">$00</h1>
+                    <h1 class="text-4xl font-bold py-2">$<span id="balance-box">00</span></h1>
                 </div>
             </div>
             <!-- Deposit/Withdraw/Balance Card End -->
@@ -60,7 +60,7 @@
         <!-- Deposit/Withdraw Input Filed Start -->
     </main>
 
-    <script src="main.js"></script>
+    <script src="bank.js"></script>
 </body>
 
 </html>
